test_files/bad/both_part_2.ru
def A "aa" "bb"

if A and B then "aa"